# code/trendsellr-infrastructure-input/trendsellr-rest/src/main/java/com/trendsellr/infrastructure/input/rest/controller/ProductController.java
@@ -4,16 +4,19 @@ import com.trendsellr.application.usecase.CreateProductUseCase;
 import com.trendsellr.application.usecase.FindAllProductsUseCase;
 import com.trendsellr.application.usecase.FindProductByIdUseCase;
 import com.trendsellr.domain.model.Product;
+import com.trendsellr.domain.model.ProductCollection;
 import com.trendsellr.infrastructure.input.rest.api.ProductsApi;
-import com.trendsellr.infrastructure.input.rest.dto.ProductDTO;
+import com.trendsellr.infrastructure.input.rest.dto.ProductCollectionDTO;
+import com.trendsellr.infrastructure.input.rest.dto.ProductCreateRequestDTO;
+import com.trendsellr.infrastructure.input.rest.dto.ProductIdDTO;
+import com.trendsellr.infrastructure.input.rest.dto.ProductResponseDTO;
+import com.trendsellr.infrastructure.input.rest.mapper.ProductCollectionDTOMapper;
 import com.trendsellr.infrastructure.input.rest.mapper.ProductDTOMapper;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-
-import java.util.List;
 
 @Slf4j
 @RestController
@@ -26,33 +29,41 @@ public class ProductController implements ProductsApi {
 
     private final ProductDTOMapper productDtoMapper;
 
-    @Override
-    public ResponseEntity<ProductDTO> createProduct(ProductDTO productDto) {
-        log.info("REST request to create Product: {}", productDto);
+    private final ProductCollectionDTOMapper productCollectionDTOMapper;
 
-        var productToCreate = this.productDtoMapper.toDomain(productDto);
+    @Override
+    public ResponseEntity<ProductIdDTO> createProduct(ProductCreateRequestDTO productCreateRequestDto) {
+        log.info("REST request to create Product: {}", productCreateRequestDto);
+
+        var productToCreate = this.productDtoMapper.toDomain(productCreateRequestDto.getProduct());
         Product createdProduct = this.createProductUseCase.dispatch(productToCreate);
 
-        return new ResponseEntity<>(this.productDtoMapper.toDto(createdProduct), HttpStatus.CREATED);
+        ProductIdDTO productIdDto = new ProductIdDTO();
+        productIdDto.setId(createdProduct.getId());
+
+        return new ResponseEntity<>(productIdDto, HttpStatus.CREATED);
     }
 
     @Override
-    public ResponseEntity<ProductDTO> getProductById(String id) {
+    public ResponseEntity<ProductResponseDTO> getProductById(String id) {
         log.info("REST request to get Product by id: {}", id);
 
         return findProductByIdUseCase.dispatch(id)
                 .map(this.productDtoMapper::toDto)
+                .map(productDto -> {
+                    ProductResponseDTO responseDto = new ProductResponseDTO();
+                    responseDto.setProduct(productDto);
+                    return responseDto;
+                })
                 .map(ResponseEntity::ok)
                 .orElse(ResponseEntity.notFound().build());
     }
 
     @Override
-    public ResponseEntity<List<ProductDTO>> getAllProducts() {
+    public ResponseEntity<ProductCollectionDTO> getAllProducts(Long page, Integer pageSize) {
         log.info("REST request to get all Products");
-        List<ProductDTO> products = findAllProductsUseCase.dispatch().stream()
-            .map(this.productDtoMapper::toDto)
-            .toList();
+        ProductCollection productCollection = findAllProductsUseCase.dispatch(page, pageSize);
 
-        return ResponseEntity.ok(products);
+        return ResponseEntity.ok(this.productCollectionDTOMapper.toDto(productCollection));
     }
 }
