# code/trendsellr-infrastructure-input/trendsellr-rest/src/main/java/com/trendsellr/infrastructure/input/rest/mapper/ProductCollectionDTOMapper.java
@@ -1,0 +1,12 @@
+package com.trendsellr.infrastructure.input.rest.mapper;
+
+import com.trendsellr.domain.model.ProductCollection;
+import com.trendsellr.infrastructure.input.rest.dto.ProductCollectionDTO;
+import com.trendsellr.input.common.rest.mapper.config.CommonMapperConfig;
+import org.mapstruct.Mapper;
+
+@Mapper(config = CommonMapperConfig.class, uses = {ProductDTOMapper.class})
+public interface ProductCollectionDTOMapper {
+
+    ProductCollectionDTO toDto(ProductCollection productCollection);
+}
