# code/trendsellr-infrastructure-output/trendsellr-persistence-mongodb/src/main/java/com/trendsellr/infrastructure/output/persistence/mongodb/entity/MetadataEntity.java
@@ -1,0 +1,17 @@
+package com.trendsellr.infrastructure.output.persistence.mongodb.entity;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class MetadataEntity {
+
+    private String creationDateTime;
+
+    private String lastUpdatedDateTime;
+
+    private Integer version;
+}
