# code/trendsellr-infrastructure-output/trendsellr-persistence-mongodb/src/main/java/com/trendsellr/infrastructure/output/persistence/mongodb/repository/spring/SpringProductRepository.java
@@ -1,11 +1,16 @@
 package com.trendsellr.infrastructure.output.persistence.mongodb.repository.spring;
 
-import com.trendsellr.domain.model.Product;
+import com.trendsellr.infrastructure.output.persistence.mongodb.entity.ProductEntity;
 import org.springframework.data.mongodb.repository.MongoRepository;
 import org.springframework.stereotype.Repository;
+
+import java.util.Optional;
 
 /**
  * Spring Data MongoDB repository for the Product entity.
  */
 @Repository
-public interface SpringProductRepository extends MongoRepository<Product, String> {}
+public interface SpringProductRepository extends MongoRepository<ProductEntity, String> {
+
+    Optional<ProductEntity> findByProductId(String productId);
+}
